@@ -1393,14 +1393,6 @@
           The Ethernet address for the DHCP server to use.
         </column>
 
-        <column name="options" key="router">
-          <p>
-            The IP address of a gateway for the client to use.  This should be
-            in the subnet of the offered IP.  The DHCPv4 option code for this
-            option is 3.
-          </p>
-        </column>
-
         <column name="options" key="lease_time"
                 type='{"type": "integer", "minInteger": 0, "maxInteger": 4294967295}'>
           <p>
@@ -1421,6 +1413,14 @@
           192.168.1.3}</code>. Please refer to RFC 2132 for more details on
           DHCPv4 options and their codes.
         </p>
+
+        <column name="options" key="router">
+          <p>
+            The IP address of a gateway for the client to use.  This should be
+            in the subnet of the offered IP.  The DHCPv4 option code for this
+            option is 3.
+          </p>
+        </column>
 
         <column name="options" key="netmask">
           <p>
